--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,10 @@
 	<groupId>net.daum.tutorials</groupId>
 	<artifactId>expense</artifactId>
 	<packaging>war</packaging>
+	<properties>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+	</properties>
 	<version>0.0.1-SNAPSHOT</version>
 	<url>http://maven.apache.org</url>
 	<dependencies>
